# inventory-app

./: package-lock.json  package.json  pyproject.toml
core/: client_secret.json  settings.py  urls.py  wsgi.py
inventory/: admin.py  models.py  serializer.py  urls.py  views.py
inventory-frontend/: app.vue  nuxt.config.ts  package-lock.json  package.json
inventory-frontend/assets/: globalVar.js
inventory-frontend/components/: CategoryCount.vue  CreateItemForm.vue  DisplayInfo.vue  InvLog.vue  ItemButtons.vue  MoveItems.vue  User.vue  UserMenu.vue  VendorCount.vue  alerts.vue  card.vue  catalog.vue  categoryInfo.vue  extra.vue  header.vue  info.vue  item.vue  itemMonitor.vue  itemPerCat.vue  monitor.vue  popupNoti.vue  search.vue  vendorInfo.vue  vendors.vue
inventory-frontend/pages/: index.vue  itemForm.vue  newItem.vue
inventory-frontend/public/: style.css
inventory-frontend/store/: ItemsStore.ts  index.js  interface.ts
inventory/migrations/: 0001_initial.py  0002_alter_item_image.py  0002_categories_remove_item_category_item_category.py  0002_categories_rename_created_item_updated.py  0002_category_alter_item_category.py  0002_category_category_name.py  0002_category_remove_item_category_item_category.py  0002_item_min_amount.py  0002_log.py  0002_log_category_log_vendor.py  0002_remove_item_min_amount.py  0002_remove_item_suppliesneeded.py  0003_alter_item_category_delete_category.py  0003_alter_item_location.py  0003_alter_log_pub_date.py  0003_delete_categories_item_category.py  (+28 more)
inventory_app/: settings.py
scripts/: add_cat.py  add_items.py
(+6 files in other folders)
