[tool.poetry]
name = "inventory-app"
version = "0.1.0"
description = ""
authors = ["Henry Zheng <zhenghenry2@gmail.com>"]
readme = "README.md"
packages = [{include = "inventory_app"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
